--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,26 +5,22 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>Helio | Real-time Collaborative Code Editor</title>
+    <meta name="description" content="Helio is a next-gen collaborative ide built with real-time sync, video conferencing, and an interactive whiteboard. Code together, faster." />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://helio-flax.vercel.app/" />
+    <meta property="og:title" content="Helio - Code Together, Anywhere" />
+    <meta property="og:description" content="Real-time collaborative code editor with whiteboard and chat support. Experience the future of pair programming." />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://helio-flax.vercel.app/" />
+    <meta property="twitter:title" content="Helio - Code Together, Anywhere" />
+    <meta property="twitter:description" content="Real-time collaborative code editor with whiteboard and chat support." />
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo512.png" />
   </head>
   <body style="background-color: #1c1e29;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
